--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,7 +592,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/me.jpg") center center no-repeat;
+  background: url("../img/propic.png") center center no-repeat;
   background-size: cover;
   min-height: 500px;
 }
