--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,7 +306,7 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 50vh;
+  height: 100vh;
   background: url("../img/mainpic.jpg") top right;
   background-size: cover;
   position: relative;
@@ -1296,7 +1296,7 @@ section {
 --------------------------------------------------------------*/
 #footer {
   background: url("../img/seapic.jpg") top center no-repeat;
-  background-size: contain;
+  background-size: auto;
   color: #fff;
   font-size: 14px;
   text-align: center;
