--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,7 +338,7 @@ h6 {
 #hero h1 {
   margin: 0 0 10px 0;
   font-size: 64px;
-  font-family: "Satisfy", serif;
+  font-family: "Raleway", serif;
   color: #fff;
 }
 
