--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1296,11 +1296,11 @@ section {
 --------------------------------------------------------------*/
 #footer {
   background: url("../img/cplanpic.jpg") top center no-repeat;
-  background-size: auto;
+  background-size: contain;
   color: #fff;
   font-size: 14px;
   text-align: center;
-  padding: 80px 0;
+  padding: 300px 0;
   position: relative;
   
 }
