footer size update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1299,8 +1299,8 @@ section {
   background-size: contain;
   color: #fff;
   font-size: 14px;
-  text-align: center;
-  padding: 80px 0;
+  text-align: left;
+  padding: 600px 0;
   position: relative;
   
 }
